# Codefu-panda

./: .agent_config.example.json  .agent_config.json  .gitignore  README.md  goals.md  instructions.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md
local_agent/: __init__.py  __main__.py  ai_connector.py  command_runner.py  file_watcher.py  logger.py  main.py  model_protocol.py  models.py  permission_manager.py  repo_summary.py  snapshots.py
tests/: __init__.py  helpers.py  test_ai_connector.py  test_cli.py  test_command_runner.py  test_file_watcher.py  test_logger.py  test_main_flow.py  test_model_protocol.py  test_permission_manager.py  test_repo_summary.py  test_snapshots.py
