[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codefu-panda"
version = "0.1.0"
description = "A local, safety-first coding agent CLI prototype."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Jeremy Qi" }
]
dependencies = []

[project.scripts]
codefu-panda = "local_agent.main:main"

[tool.setuptools.packages.find]
include = ["local_agent*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
